# scg-experiments

./: .gitignore  README.md  pyproject.toml
src/: bootstrap.py  generate_proto.py  mcp_server.py  rag_engine.py  upload_to_neo4j.py
